--- a/Practica2_Visualizacion25_Alumno.Rmd
+++ b/Practica2_Visualizacion25_Alumno.Rmd
@@ -230,7 +230,7 @@ Observamos que con el color se ve mejor la información que introduce la variabl
 
 * Carga el fichero ``iris.tidy.Rdata`` utilizando lo aprendido en la práctica 1.
 * Utiliza la función **str()** para ver qué variables contiene el dataset.
-* Crea un objeto ggplot denominado ``iris.grafico1`` en el que esté definido el conjunto de datos ``iris.tidy`` alojado en el fichero ``iris.tidy.RData`` y un *aesthetics* en el que en el eje $x$ esté definida la variable ``Species`` y en el eje $y$ esté definida la variable ``Value``.
+* Crea un objeto ggplot denominado ``iris.grafico1`` en el que esté definido el conjunto de datos ``iris_tidy`` alojado en el fichero ``iris.tidy.RData`` y un *aesthetics* en el que en el eje $x$ esté definida la variable ``Species`` y en el eje $y$ esté definida la variable ``Value``.
 * Añade una capa que defina el objeto geométrico necesario para  construir un gráfico de dispersión de las variables ``Species`` y ``Value``.
 * Modifica el *aesthetics* de ``iris.grafico1`` para visualizar  la variable categórica `` Part`` y almacénalo en ``iris.grafico2``. A partir del objeto ``iris.grafico2``, representa un gráfico de dispersión en el que se muestren los puntos dados por las variables ``Species`` y ``Value``, y el color del punto se corresponda con el valor de la variable ``Part``.
 * Incluye información de la variable ``Measure`` haciendo dos gráficos de dispersión (dispuestos en filas) con **facet_grid()**, como en el apartado de introducción, para los dos valores que toma la variable ``Measure``. Prueba a cambiar la disposición de los gráficos para que sea en columnas ¿Qué disposición, en filas o en columnas, permite comparar mejor los valores de las dos variables?
@@ -239,7 +239,25 @@ Observamos que con el color se ve mejor la información que introduce la variabl
 
 ```{r Solucion ejercicio 3}
 rm(list = ls())
+library(ggplot2)
+load(file = "data/iris_tidy.RData")
 
+str(iris.tidy)
+
+iris.grafico1 <- ggplot(iris.tidy, aes(x = Species, y = Value)) + geom_point()
+iris.grafico1
+
+iris.grafico2 <- ggplot(iris.tidy, aes(x = Species, y = Value, color = Part)) + geom_point()
+iris.grafico2
+
+iris.grafico3 <- iris.grafico2 + facet_grid(.~Measure)
+iris.grafico3
+
+iris.grafico4 <- iris.grafico2 + facet_grid(Measure~.)
+iris.grafico4
+
+iris.grafico5 <- ggplot(iris.tidy, aes(x = Species, y = Value, color = Part)) + geom_jitter() + facet_grid(.~Measure)
+iris.grafico5
 
 # ggsave('figs/Ejercicio3.pdf') # se almacena el último gráfico generado
 ```
