--- a/Practica2_Visualizacion25_Alumno.Rmd
+++ b/Practica2_Visualizacion25_Alumno.Rmd
@@ -341,7 +341,25 @@ ggplot(data=Dosis.Medicina2, aes(x=Dosis, y=Efectividad, group=Complemento)) +
 * Almacena en formato **pdf** el gráfico resultante en un fichero denominado ``Ejercicio4.pdf``.
 
 ```{r Solucion ejercicio 4}
+rm(list = ls())
+library(ggplot2)
+load(file = "data/Ejercicio4_Data.RData")
 
+str(DatosEjer4)
+
+grafico1 <- ggplot(DatosEjer4, aes(x = Fecha, y = Ventas, color = Fabricante)) + geom_point()
+grafico1
+
+grafico2 <- ggplot(DatosEjer4, aes(x = Fecha, y = Ventas, color = Fabricante)) + geom_line()
+grafico2
+
+grafico3 <- ggplot(DatosEjer4, aes(x = Fecha, y = Ventas, color = Fabricante)) + geom_line(aes(linetype = Fabricante))
+grafico3
+
+grafico4 <- grafico3 + labs(title = "Ventas mensuales de diferentes compañías tecnológicas")
+grafico4
+
+ggsave('figs/Ejercicio4.pdf')
 ```
 
 ## Barras de error con **ggplot2**
